Closed Bug 596410 Opened 15 years ago Closed 15 years ago

Shadow layers on android broken by bug 594553

Categories

(Core :: Graphics, defect)

ARM
Android
defect
Not set
blocker

Tracking

()

RESOLVED FIXED
Tracking Status
fennec 2.0b1+ ---

People

(Reporter: cjones, Assigned: cjones)

References

Details

Attachments

(1 file)

The code unconditionally creates a BasicLayerManager for software fallback, but with content processes we actually need to create a BasicShadowLayerManager. My patch moves this logic into nsBaseWidget.
Assignee: nobody → jones.chris.g
Attachment #475294 - Flags: review?(vladimir)
Can't use cross-process layers on android until this is fixed. Blocks cedar-->m-c merge.
Severity: normal → blocker
tracking-fennec: --- → ?
tracking-fennec: ? → 2.0b1+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: