Bug 596410: Use BasicShadowLayerManager when there might be content processes. r=vlad